tests/snapshots/cli__toggle_errors@toggle_flat_path_missing.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toggle_flat.flake.nix"
    - "--diff"
    - toggle
    - "./does-not-exist-here"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: could not read path './does-not-exist-here'
  caused by: No such file or directory (os error 2)

hint: check the path, or pass a remote ref like `github:owner/repo`
